--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,14 @@ copyright_year   = 2014
 [@Author::GETTY]
 
 [Prereqs]
+AnyEvent::WebSocket::Client = 0.20
+DBIx::Class = 0.08250
+JSON::MaybeXS = 1.001000
+Moo = 1.004002
+MooX = 0.101
+MooX::Options = 4.006
+Plack::Middleware::Static = 0
+Twiggy = 0.1024
 
 [Prereqs / TestRequires]
 Test::More = 0.98
